// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BulletText /> should match snapshot for custom bullet text 1`] = `
<div
  class="base display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap flexStart_mobile_base 3_mobile_base 3_mobile_base"
>
  <div
    class="base 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="base position_relative flexShrink_0"
    >
      <span>
        <i
          class="base display_block"
          role="presentation"
        >
          <svg
            class="base display_block width_full height_full"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 7L9 19l-5.5-5.5 1.414-1.414L9 16.172 19.586 5.586 21 7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="base 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="base flexGrow_1"
    >
      <span
        class="base display_block textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base"
      >
        Hello World
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for default bullet text 1`] = `
<div
  class="base display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap flexStart_mobile_base 3_mobile_base 3_mobile_base"
>
  <div
    class="base 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="base display_flex position_relative pill_mobile_base backgroundColours_green200_base center_mobile_base flexShrink_0 center_mobile_base bullet_base"
    >
      <span
        class="base textAlign_left root_base sizes_2_base colours_success_base fontWeight_normal_base"
      >
        •
      </span>
    </div>
  </div>
  <div
    class="base 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="base flexGrow_1"
    >
      <span
        class="base display_block textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for ordered bullet text 1`] = `
<div
  class="base display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap flexStart_mobile_base 3_mobile_base 3_mobile_base"
>
  <div
    class="base 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="base display_flex position_relative pill_mobile_base backgroundColours_green200_base center_mobile_base flexShrink_0 center_mobile_base bullet_base"
    >
      <span
        class="base textAlign_left root_base sizes_2_base colours_success_base fontWeight_normal_base"
      >
        ?
      </span>
    </div>
  </div>
  <div
    class="base 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="base flexGrow_1"
    >
      <span
        class="base display_block textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for primary bullet text with custom bullet character 1`] = `
<div
  class="base display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap flexStart_mobile_base 3_mobile_base 3_mobile_base"
>
  <div
    class="base 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="base display_flex position_relative pill_mobile_base backgroundColours_green200_base center_mobile_base flexShrink_0 center_mobile_base bullet_base"
    >
      <span
        class="base textAlign_left root_base sizes_2_base colours_success_base fontWeight_normal_base"
      >
        ?
      </span>
    </div>
  </div>
  <div
    class="base 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="base flexGrow_1"
    >
      <span
        class="base display_block textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> should match snapshot for secondary bullet text with custom bullet character 1`] = `
<div
  class="base display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap flexStart_mobile_base 3_mobile_base 3_mobile_base"
>
  <div
    class="base 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="base display_flex position_relative pill_mobile_base backgroundColours_gray200_base center_mobile_base flexShrink_0 center_mobile_base bullet_base"
    >
      <span
        class="base textAlign_left root_base sizes_2_base colours_dark_base fontWeight_normal_base"
      >
        ?
      </span>
    </div>
  </div>
  <div
    class="base 3_mobile_base 3_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <div
      class="base flexGrow_1"
    >
      <span
        class="base display_block textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;
